[gd_scene load_steps=4 format=3 uid="uid://scjdi4s2tsu"]

[ext_resource type="Script" path="res://Scripts/Enemies/EnemyWalking.gd" id="1_oxpao"]
[ext_resource type="Texture2D" uid="uid://b8rgotcrvainl" path="res://Assets/Sprites/Enemies/Assassin_v1.png" id="2_s6d6p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6hjse"]
radius = 50.0

[node name="EnemyWalking" type="CharacterBody2D" groups=["Enemies"]]
z_index = 10
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_oxpao")
MOVEMENT_SPEED = 150.0

[node name="AssassinV1" type="Sprite2D" parent="."]
position = Vector2(3.75, 0)
rotation = -1.57079
texture = ExtResource("2_s6d6p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6hjse")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_point_size = 15.0
debug_path_custom_line_width = 10.0

[node name="PathCalculationTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="PathCalculationTimer" to="." method="_on_path_calculation_timer_timeout"]
